# phionyx-pipeline-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/phionyx_pipeline_mcp/: __init__.py  __main__.py  check_gate.py  cli.py  constraint_ledger.py  grounding_core.py  server.py
tests/: test_cg_l3.py  test_constraint_binding.py  test_smoke.py
